@@ -1,0 +1,17 @@
+<h1>K-pop傳奇團體強勢回歸！2NE1、東方神起、GFriend等重聚潮掀起懷舊旋風</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1QJczZqlaWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>近年來，曾經在韓國和海外登上榜首的幾個標誌性K-pop團體，在經過多年的沉寂後，重新聚首。這一趨勢被歸因於復古流行音樂的復興，重新點燃了粉絲們對於他們喜愛的K-pop偶像重聚的渴望。</p>
+<p>許多曾經的頂級K-pop團體，由於法律糾紛、合同到期或其他原因，已經暫停活動或解散，一些成員則繼續以個人身份發展音樂事業。然而，即使是在進行個人事業時，許多藝人仍然與最初帶給他們成名的團體身份保持著密切的聯繫。</p>
+<p>一個值得注意的例子是2NE1，這個來自YG娛樂的傳奇女團，正在為他們的重聚引起廣泛關注。為了慶祝他們的15週年紀念，2NE1將於10月4日至6日在首爾奧林匹克公園的奧林匹克音樂廳舉行“2024 2NE1 Concert: Welcome Back in Seoul”，這將是他們十年來的第一次完整團體表演。</p>
+<p>對於這一趨勢，流行文化評論家金度勳表示：“2NE1曾經非常受歡迎，他們與YG娛樂重聚非常重要。雖然今天被視為K-pop的商業巔峰，但K-pop真正的黃金時代是在2000年代初期，那時它獲得了巨大的流行和愛戴。”</p>
+<p>來自三大娛樂公司之一的官方人員指出，音樂趨勢的週期性質，包括全球復古流行音樂的復興——正如聯合公園和最近重聚的綠洲合唱團所示。“音樂趨勢來來去去，隨著復古流行音樂的回歸，我們不僅看到翻唱歌曲，還看到原創藝人的重聚。”</p>
+<p>然而，推動這些重聚的不僅僅是復古流行音樂的復興。還有強大的粉絲需求，搭配著良好的時機和與藝人回歸相吻合的個人原因。</p>
+<p>金在中和金俊秀，東方神起的三名成員中的兩位，也在五年後重聚，以慶祝他們的20週年紀念。他們的聯合演唱會“JX 2024 Concert Identity in Seoul”將於11月8日至10日在首爾的KSPO巨蛋舉行。這將是JYJ十年來的第一次演唱會，也是他們自2015年以來的第一次團體活動，儘管他們將以項目組JX的名義演出。<h2>K-pop 團體重聚潮：粉絲們的願望成真</h2></p>
+<p>雖然這次重聚不會包括東方神起成員允浩和沈昌珉，由於過去的法律糾紛，但粉絲們對於 JYJ 的重聚感到興奮。評論家金度勳表示，這是粉絲們一直以來的願望，有時過去的怨恨或合同問題得到解決，允許團體重聚。</p><p>另一位主要 K-pop 娛樂公司的官方人員將這一趨勢描述為一個更大的運動的一部分。隨著 K-pop 表演的增加，整體文化景觀正在被重新活化。時機和適當的管理對於這些重聚至關重要。粉絲們渴望完整的團體回歸，但需要管理協調來使這些回歸成為現實。</p><h3>GFriend 重聚</h3><p>十年前出道的團體 GFriend 已經宣布他們將於明年一月重聚，這將是他們在與 Source Music 的合同到期後近四年的第一次回歸。粉絲們對此做出了熱烈的回應。</p><p>該團體在活躍期間曾經以熱門歌曲《Rough》、《Navillera》、《Hear the Wind Sing》和《Time for the Moon Night》給粉絲們留下了深刻的印象。該團體在與經紀公司的合同到期後決定分道揚鑣，三年前，成員恩哈、信飛和 Umji 已經以團體 VIVIZ 的身份重新出道，目前活躍於音樂界。</p><p><ul></p>
+  <li>GFriend 重聚時間：明年一月</li>  <li>重聚原因：與 Source Music 的合同到期後近四年的第一次回歸</li>  <li>粉絲們的反應：熱烈的回應</li><p></ul></p>
+<h2>GFriend 將與粉絲重聚慶祝出道10周年</h2><p>GFriend 即將與粉絲重聚，慶祝他們的10周年出道紀念日。這個項目是由成員們的渴望給予「Buddy」（GFriend 的粉絲團）珍貴的回憶而實現的。</p>
+<p>流行文化評論家金指出，近年來 K-pop 偶像的壽命已經增加，促成了這些曾經輝煌的團體的回歸。許多團體以前在七年後就解散，但現在更多的藝人正在繼續他們的活動，時間更長。他們的影響力和認可度仍然很強。</p>
+
+<p>資料來源： Korea Herald</p>
