@@ -21,3 +21,4 @@ https://www.koreaherald.com/view.php?ud=20240927050553
 https://www.koreaherald.com/view.php?ud=20240927050529
 https://www.koreaherald.com/view.php?ud=20240927050458
 https://www.koreaherald.com/view.php?ud=20240926050668
+https://www.koreaherald.com/view.php?ud=20240926050629
